// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rewards > the timeline at 0h is unchanged 1`] = `
{
  "progress": [
    {
      "done": false,
      "earned": 0,
      "id": "b",
      "remaining": 12,
      "target": 12,
      "title": "Reward b",
    },
    {
      "done": false,
      "earned": 0,
      "id": "c",
      "remaining": 20,
      "target": 20,
      "title": "Reward c",
    },
    {
      "done": false,
      "earned": 0,
      "id": "d",
      "remaining": 30,
      "target": 30,
      "title": "Reward d",
    },
  ],
  "timeline": {
    "stops": [
      {
        "id": "a",
        "kind": "earned",
        "note": "Claimed Nov 15, 2023",
        "progress": 100,
        "ready": false,
        "title": "Reward a",
      },
      {
        "kind": "next",
        "note": "22h of shooting to go",
        "progress": 0,
        "ready": false,
        "title": "Reward b",
      },
      {
        "kind": "next",
        "note": "50h of shooting to go",
        "progress": 0,
        "ready": false,
        "title": "Reward c",
      },
    ],
  },
}
`;

exports[`rewards > the timeline at 4h is unchanged 1`] = `
{
  "progress": [
    {
      "done": false,
      "earned": 0,
      "id": "b",
      "remaining": 12,
      "target": 12,
      "title": "Reward b",
    },
    {
      "done": false,
      "earned": 0,
      "id": "c",
      "remaining": 20,
      "target": 20,
      "title": "Reward c",
    },
    {
      "done": false,
      "earned": 0,
      "id": "d",
      "remaining": 30,
      "target": 30,
      "title": "Reward d",
    },
  ],
  "timeline": {
    "stops": [
      {
        "id": "a",
        "kind": "earned",
        "note": "Claimed Nov 15, 2023",
        "progress": 100,
        "ready": false,
        "title": "Reward a",
      },
      {
        "kind": "next",
        "note": "18h of shooting to go",
        "progress": 0,
        "ready": false,
        "title": "Reward b",
      },
      {
        "kind": "next",
        "note": "46h of shooting to go",
        "progress": 0,
        "ready": false,
        "title": "Reward c",
      },
    ],
  },
}
`;

exports[`rewards > the timeline at 22h is unchanged 1`] = `
{
  "progress": [
    {
      "done": true,
      "earned": 12,
      "id": "b",
      "remaining": 0,
      "target": 12,
      "title": "Reward b",
    },
    {
      "done": false,
      "earned": 0,
      "id": "c",
      "remaining": 20,
      "target": 20,
      "title": "Reward c",
    },
    {
      "done": false,
      "earned": 0,
      "id": "d",
      "remaining": 30,
      "target": 30,
      "title": "Reward d",
    },
  ],
  "timeline": {
    "stops": [
      {
        "id": "b",
        "kind": "earned",
        "note": "Earned: ready to claim",
        "progress": 100,
        "ready": true,
        "title": "Reward b",
      },
      {
        "kind": "next",
        "note": "28h of shooting to go",
        "progress": 0,
        "ready": false,
        "title": "Reward c",
      },
      {
        "kind": "next",
        "note": "40h of shooting to go",
        "progress": 0,
        "ready": false,
        "title": "Reward d",
      },
    ],
  },
}
`;

exports[`rewards > the timeline at 40h is unchanged 1`] = `
{
  "progress": [
    {
      "done": true,
      "earned": 30,
      "id": "b",
      "remaining": 0,
      "target": 12,
      "title": "Reward b",
    },
    {
      "done": false,
      "earned": 10,
      "id": "c",
      "remaining": 10,
      "target": 20,
      "title": "Reward c",
    },
    {
      "done": false,
      "earned": 8,
      "id": "d",
      "remaining": 22,
      "target": 30,
      "title": "Reward d",
    },
  ],
  "timeline": {
    "stops": [
      {
        "id": "b",
        "kind": "earned",
        "note": "Earned: ready to claim",
        "progress": 100,
        "ready": true,
        "title": "Reward b",
      },
      {
        "kind": "next",
        "note": "10h of shooting to go",
        "progress": 50,
        "ready": false,
        "title": "Reward c",
      },
      {
        "kind": "next",
        "note": "22h of shooting to go",
        "progress": 26.666666666666668,
        "ready": false,
        "title": "Reward d",
      },
    ],
  },
}
`;

exports[`rewards > the timeline at 70h is unchanged 1`] = `
{
  "progress": [
    {
      "done": true,
      "earned": 60,
      "id": "b",
      "remaining": 0,
      "target": 12,
      "title": "Reward b",
    },
    {
      "done": true,
      "earned": 40,
      "id": "c",
      "remaining": 0,
      "target": 20,
      "title": "Reward c",
    },
    {
      "done": true,
      "earned": 38,
      "id": "d",
      "remaining": 0,
      "target": 30,
      "title": "Reward d",
    },
  ],
  "timeline": {
    "stops": [
      {
        "id": "d",
        "kind": "earned",
        "note": "Earned: ready to claim",
        "progress": 100,
        "ready": true,
        "title": "Reward d",
      },
    ],
  },
}
`;
